Overflow-y fix for small mobile devices

--- a/app/react/styles/modules/article-card.styl
+++ b/app/react/styles/modules/article-card.styl
@@ -40,11 +40,14 @@
 .article-card__excerpt
   line-height 1.2
 
+.article-card__header,
+.article-card__image
+  border-top-left-radius 9px
+  border-top-right-radius 9px
+
 .article-card__image
   position relative
   background-color $gray
-  border-top-left-radius 9px
-  border-top-right-radius 9px
   background-position top center
   background-size cover
   display flex
